# gen

./: Cargo.toml  README.md
src/: cli.rs  entropy.rs  main.rs  passphrase.rs  password.rs  wordlist.rs  wordlist_long.rs  wordlist_short.rs
