[package]
name = "gen"
version = "0.1.0"
edition = "2021"
description = "a simple & secure cli password/passphrase generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
